<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pace.trade.LoginActivity"
    android:background="@color/loginPage">

    <LinearLayout

        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginHeading"
            android:textSize="30sp"
            android:gravity="center_horizontal"/>
        <EditText
            android:hint="Enter email"
            android:id="@+id/emailEditTextLogin"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="Enter password"
            android:id="@+id/passwordEditTextLogin"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/signUpButton"
            android:text="@string/logIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/loginButton"/>

        <TextView
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:text="@string/notRegistered"
            android:id="@+id/signUpInTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>