<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/userRegister">

    <LinearLayout

        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/user_registration"
            android:textAlignment="center"/>

        <EditText
            android:hint="Enter email"
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="Enter password"
            android:id="@+id/passwordEditText"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/registerButton"
            android:text="@string/registerButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/registerButton"/>

        <TextView
            android:textAlignment="center"
            android:text="@string/registeredHere"
            android:id="@+id/signInTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>



</RelativeLayout>